# materialscopilot

./: .dockerignore  .env.example  README.md  pyproject.toml
apps/api/: config.py
apps/api/routers/: health.py  ingest.py
apps/ui/: Home.py
apps/ui/pages/: 1_Upload.py  2_Ask.py  3_Summarize.py
core/: logger.py
core/ingestion/: pdf_loader.py
core/rag/: pipeline.py  prompts.py
core/retrieval/: embedder.py  vectorstore.py
core/schemas/: models.py
